--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,3 +78,14 @@
 ::-webkit-scrollbar-thumb {
   background: rgb(63, 62, 62);
 }
+
+@keyframes rainbow {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+.animate-rainbow {
+  background-size: 300% 300%;
+  animation: rainbow 3s infinite linear;
+}
